# MpRPC

./: CMakeLists.txt  README.md
example/: friends.pb.cc  friends.pb.h  friends.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
src/: CMakeLists.txt  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  mprpcheader.pb.cc  mprpcheader.pb.h  mprpcheader.proto  mprpclogger.cc  mprpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  mprpclogger.h  mprpcprovider.h  zookeeperutil.h
testpb/: app  main.cc  test.pb.cc  test.pb.h  test.proto
